# Bun

./: .gitignore  README.md  pyproject.toml  setup.cfg
scripts/: test_audio.py
src/Bun/: __init__.py  app.py  main.py  splash.py  storage.py  themes.py
src/Bun/components/: __init__.py  action_bar.py  action_input.py  box_tabs.py  chat_list.py  chat_thread.py  friend_list.py  global_volume.py  header.py  navbar.py  status_footer.py  voice_message.py
src/Bun/data/: __init__.py  chat_users.py
src/Bun/screens/: auth.py  base.py  chat_detail.py  chats.py  friends.py  settings.py
src/Bun/styles/: action_bar.tcss  action_input.tcss  app.tcss  auth.tcss  base.tcss  box_tabs.tcss  chat_list.tcss  chat_thread.tcss  friend_list.tcss  global_volume.tcss  header.tcss  navbar.tcss  settings.tcss  status_footer.tcss
src/Bun/widgets/: __init__.py
