[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "messenger-textual"
version = "0.1.0"
description = "TUI messenger prototype built with Textual"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.61.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
bun = "Bun.main:run"
