[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bun"
version = "0.1.0"
description = "Bun TUI messenger prototype built with Textual"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.61.0",
    "textual-image>=0.11.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "simpleplayer>=0.0.2",
    "pillow>=10.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
bun = "Bun.main:run"
